--- a/Daily_Planner/app/views/dashboard.html
+++ b/Daily_Planner/app/views/dashboard.html
@@ -45,8 +45,8 @@
                 <button class="change-pic-btn" onclick="openPicModal()" title="Alterar foto de perfil">
                     <i class="fas fa-camera"></i>
                 </button>
-                <h3 id="username">Nome do Usuário</h3>
-                <p id="user-email">usuario@email.com</p>
+                <h3 id="username">Nando</h3>
+                <p id="user-email">nandooliver120@gmail.com</p>
             </div>
             <nav>
                 <ul>
