--- a/Daily_Planner/app/views/dashboard.css
+++ b/Daily_Planner/app/views/dashboard.css
@@ -888,7 +888,7 @@ body {
             margin: 0;
             padding: 0;
             font-family: 'Roboto', Arial, sans-serif;
-            background-color: ;
+            background-color: #F7EADC;
         }
 
         .dashboard-container {
@@ -933,14 +933,14 @@ body {
         }
 
         #username {
-            color: #755F52;
+            color: #fff !important;
             font-size: 1.3rem;
             margin: 0 0 5px 0;
             font-weight: 600;
         }
 
         #user-email {
-            color: #99827A;
+            color: #fff !important;
             font-size: 1rem;
             margin: 0;
         }
